<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculadora</string>
    <string name="action_settings">Settings</string>
    <string name="cal">CALCULADORA</string>
    <string name="b1">1</string>
    <string name="b2">2</string>
    <string name="b3">3</string>
    <string name="bdiv">÷</string>
	<string name="b4">4</string>
	<string name="b5">5</string>
	<string name="b6">6</string>
	<string name="bpor">*</string>
	<string name="b7">7</string>
	<string name="b8">8</string>
	<string name="b9">9</string>
	<string name="bpunto">.</string>
	<string name="btodo">C</string>
	<string name="bmas">+</string>
	<string name="b0">0</string>
	<string name="bmenos">-</string>
	<string name="igual">=</string>
	<string name="borrar">Del</string>
	

</resources>
