<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.calculadora.MainActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/cal"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/resul"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="true"
                    android:ems="10"
                    android:focusable="false"
                    android:gravity="center"
                    android:inputType="number"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" >

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/b1"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="0.99"
                    android:text="@string/b1"
                    android:textColor="#FFFFFF"
                    android:background="#708090"
                    android:textSize="40sp" />

                <Button
                    android:id="@+id/b2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.99"
                    android:text="@string/b2"
                    android:textColor="#FFFFFF"
                    android:background="#708090"
                    android:textSize="40sp" />

                <Button
                    android:id="@+id/b3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.00"
                    android:text="@string/b3"
                    android:textColor="#FFFFFF"
                    android:background="#708090"
                    android:textSize="40sp" />

                <Button
                    android:id="@+id/bdiv"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.00"
                    android:text="@string/bdiv"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/b4"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="0.99"
                    android:text="@string/b4"
                    android:textColor="#FFFFFF"
                    android:background="#708090"
                    android:textSize="40sp" />

                <Button
                    android:id="@+id/b5"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="0.99"
                    android:text="@string/b5"
                    android:textColor="#FFFFFF"
                    android:background="#708090"
                    android:textSize="40sp" />

                <Button
                    android:id="@+id/b6"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="0.99"
                    android:text="@string/b6"
                    android:textColor="#FFFFFF"
                    android:background="#708090"
                    android:textSize="40sp" />

                <Button
                    android:id="@+id/bpor"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="0.99"
                    android:text="@string/bpor"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/b7"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="0.99"
                    android:text="@string/b7"
                    android:textColor="#FFFFFF"
                    android:background="#708090"
                    android:textSize="40sp" />

                <Button
                    android:id="@+id/b8"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="0.99"
                    android:text="@string/b8"
                    android:textColor="#FFFFFF"
                    android:background="#708090"
                    android:textSize="40sp" />

                <Button
                    android:id="@+id/b9"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="0.99"
                    android:text="@string/b9"
                    android:textColor="#FFFFFF"
                    android:background="#708090"
                    android:textSize="40sp" />

                <Button
                    android:id="@+id/bmas"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="0.99"
                    android:text="@string/bmas"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/bpunto"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:text="@string/bpunto"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp" />

                <Button
                    android:id="@+id/b0"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:text="@string/b0"
                    android:textColor="#FFFFFF"
                    android:background="#708090"
                    android:textSize="40sp" />

                <Button
                    android:id="@+id/btodo"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:text="@string/btodo"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp" />

                <Button
                    android:id="@+id/bmenos"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:text="@string/bmenos"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/igual"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="2"
                    android:text="@string/igual"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp" />

                <Button
                    android:id="@+id/bborrar"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="2"
                    android:text="@string/borrar"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>